@@ -15,14 +15,17 @@
  */
 package ghidra.formats.gfilesystem;
 
+import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
+
+import ghidra.util.Msg;
 
 /**
  * A helper class used by GFilesystem implementors to track mappings between GFile
  * instances and the underlying container filesystem's native file objects.
  * <p>
- * Threadsafe after initial use of {@link #storeFile(String, int, boolean, long, Object) storeFile()}
- * by the owning filesystem.
+ * Threadsafe (methods are synchronized).
  * <p>
  * This class also provides filename 'unique-ifying' (per directory) where an auto-incrementing
  * number will be added to a file's filename if it is not unique in the directory.
@@ -33,9 +36,16 @@ import java.util.*;
 public class FileSystemIndexHelper<METADATATYPE> {
 
 	private GFile rootDir;
+	
+	static class FileData<METADATATYPE> {
+		GFile file;
+		METADATATYPE metaData;
+		long fileIndex;
+	}
 
-	protected Map<GFile, METADATATYPE> fileToEntryMap = new HashMap<>();
-	protected Map<GFile, Map<String, GFile>> directoryToListing = new HashMap<>();
+	protected Map<GFile, FileData<METADATATYPE>> fileToEntryMap = new HashMap<>();
+	protected Map<Long, FileData<METADATATYPE>> fileIndexToEntryMap = new HashMap<>();
+	protected Map<GFile, Map<String, FileData<METADATATYPE>>> directoryToListing = new HashMap<>();
 
 	/**
 	 * Creates a new {@link FileSystemIndexHelper} for the specified {@link GFileSystem}.
@@ -49,6 +59,17 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	 */
 	public FileSystemIndexHelper(GFileSystem fs, FSRLRoot fsFSRL) {
 		this.rootDir = GFileImpl.fromFSRL(fs, null, fsFSRL.withPath("/"), true, -1);
+		initRootDir(null);
+	}
+
+	private void initRootDir(METADATATYPE metadata) {
+		FileData<METADATATYPE> fileData = new FileData<>();
+		fileData.file = rootDir;
+		fileData.fileIndex = -1;
+		fileData.metaData = metadata;
+
+		fileToEntryMap.put(rootDir, fileData);
+		directoryToListing.put(rootDir, new HashMap<>());
 	}
 
 	/**
@@ -63,7 +84,7 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	/**
 	 * Removes all file info from this index.
 	 */
-	public void clear() {
+	public synchronized void clear() {
 		fileToEntryMap.clear();
 		directoryToListing.clear();
 	}
@@ -71,56 +92,84 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	/**
 	 * Number of files in this index.
 	 *
-	 * @return number of file in this index.
+	 * @return number of file in this index
 	 */
-	public int getFileCount() {
+	public synchronized int getFileCount() {
 		return fileToEntryMap.size();
 	}
 
 	/**
 	 * Gets the opaque filesystem specific blob that was associated with the specified file.
 	 *
-	 * @param f {@link GFile} to look for.
-	 * @return Filesystem specific blob associated with the specified file, or null if not found.
+	 * @param f {@link GFile} to look for
+	 * @return Filesystem specific blob associated with the specified file, or null if not found
 	 */
-	public METADATATYPE getMetadata(GFile f) {
-		return fileToEntryMap.get(f);
+	public synchronized METADATATYPE getMetadata(GFile f) {
+		FileData<METADATATYPE> fileData = fileToEntryMap.get(f);
+		return fileData != null ? fileData.metaData : null;
+	}
+
+	/**
+	 * Sets the associated metadata blob for the specified file.
+	 * 
+	 * @param f GFile to update
+	 * @param metaData new metdata blob
+	 * @throws IOException if unknown file
+	 */
+	public synchronized void setMetadata(GFile f, METADATATYPE metaData) throws IOException {
+		FileData<METADATATYPE> fileData = fileToEntryMap.get(f);
+		if ( fileData == null ) {
+			throw new IOException("Unknown file: " + f);
+		}
+		fileData.metaData = metaData;
+	}
+
+	/**
+	 * Gets the GFile instance that was associated with the filesystem file index.
+	 * 
+	 * @param fileIndex index of the file in its filesystem
+	 * @return the associated GFile instance, or null if not found
+	 */
+	public synchronized GFile getFileByIndex(long fileIndex) {
+		FileData<METADATATYPE> fileData = fileIndexToEntryMap.get(fileIndex);
+		return (fileData != null) ? fileData.file : null;
 	}
 
 	/**
 	 * Mirror's {@link GFileSystem#getListing(GFile)} interface.
 	 *
 	 * @param directory {@link GFile} directory to get the list of child files that have been
-	 * added to this index, null means root directory.
-	 * @return {@link List} of GFile files that are in the specified directory, never null.
+	 * added to this index, null means root directory
+	 * @return {@link List} of GFile files that are in the specified directory, never null
 	 */
-	public List<GFile> getListing(GFile directory) {
-		Map<String, GFile> dirListing = getDirectoryContents(directory, false);
-		List<GFile> results =
-			(dirListing != null) ? new ArrayList<>(dirListing.values()) : Collections.emptyList();
-		return results;
+	public synchronized List<GFile> getListing(GFile directory) {
+		Map<String, FileData<METADATATYPE>> dirListing = getDirectoryContents(directory, false);
+		if (dirListing == null) {
+			return List.of();
+		}
+		return dirListing.values()
+				.stream()
+				.map(fd -> fd.file)
+				.collect(Collectors.toList());
 	}
 
 	/**
 	 * Mirror's {@link GFileSystem#lookup(String)} interface.
 	 *
-	 * @param path path and filename of a file to find.
-	 * @return {@link GFile} instance or null if no file was added to the index at that path.
+	 * @param path path and filename of a file to find
+	 * @return {@link GFile} instance or null if no file was added to the index at that path
 	 */
-	public GFile lookup(String path) {
+	public synchronized GFile lookup(String path) {
 		String[] nameparts = (path != null ? path : "").split("/");
 		GFile parent = lookupParent(nameparts);
-		if (nameparts.length == 0) {
-			return parent;
-		}
-
-		String name = nameparts[nameparts.length - 1];
+		String name = (nameparts.length > 0) ? nameparts[nameparts.length - 1] : null;
 		if (name == null || name.isEmpty()) {
 			return parent;
 		}
 
-		Map<String, GFile> dirListing = getDirectoryContents(parent, false);
-		return (dirListing != null) ? dirListing.get(name) : null;
+		Map<String, FileData<METADATATYPE>> dirListing = getDirectoryContents(parent, false);
+		FileData<METADATATYPE> fileData = (dirListing != null) ? dirListing.get(name) : null;
+		return (fileData != null) ? fileData.file : null;
 	}
 
 	/**
@@ -133,38 +182,27 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	 * suffix added to the resultant GFile name, where nnn is the file's
 	 * order of occurrence in the container file.
 	 * <p>
+	 * 
 	 * @param path string path and filename of the file being added to the index.  Back
-	 * slashes are normalized to forward slashes.
+	 * slashes are normalized to forward slashes
 	 * @param fileIndex the filesystem specific unique index for this file, or -1
-	 * if not available.
+	 * if not available
 	 * @param isDirectory boolean true if the new file is a directory
-	 * @param length number of bytes in the file or -1 if not known or directory.
-	 * @param fileInfo opaque blob that will be stored and associated with the new
-	 * GFile instance.
-	 * @return new GFile instance.
+	 * @param length number of bytes in the file or -1 if not known or directory
+	 * @param metadata opaque blob that will be stored and associated with the new
+	 * GFile instance
+	 * @return new GFile instance
 	 */
-	public GFileImpl storeFile(String path, int fileIndex, boolean isDirectory, long length,
-			METADATATYPE fileInfo) {
+	public synchronized GFile storeFile(String path, long fileIndex, boolean isDirectory,
+			long length, METADATATYPE metadata) {
 
 		String[] nameparts = path.replaceAll("[\\\\]", "/").split("/");
 		GFile parent = lookupParent(nameparts);
 
-		int fileNum = (fileIndex != -1) ? fileIndex : fileToEntryMap.size();
 		String lastpart = nameparts[nameparts.length - 1];
-		Map<String, GFile> dirContents = getDirectoryContents(parent, true);
-		String uniqueName = dirContents.containsKey(lastpart) && !isDirectory
-				? lastpart + "[" + Integer.toString(fileNum) + "]"
-				: lastpart;
-
-		GFileImpl file = createNewFile(parent, uniqueName, isDirectory, length, fileInfo);
-
-		dirContents.put(uniqueName, file);
-		if (file.isDirectory()) {
-			getDirectoryContents(file, true);
-		}
-
-		fileToEntryMap.put(file, fileInfo);
-		return file;
+		FileData<METADATATYPE> fileData =
+			doStoreFile(lastpart, parent, fileIndex, isDirectory, length, metadata);
+		return fileData.file;
 	}
 
 	/**
@@ -176,47 +214,81 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	 * suffix added to the resultant GFile name, where nnn is the file's
 	 * order of occurrence in the container file.
 	 * <p>
+	 * 
 	 * @param filename the new file's name
 	 * @param parent the new file's parent directory
 	 * @param fileIndex the filesystem specific unique index for this file, or -1
-	 * if not available.
+	 * if not available
 	 * @param isDirectory boolean true if the new file is a directory
-	 * @param length number of bytes in the file or -1 if not known or directory.
-	 * @param fileInfo opaque blob that will be stored and associated with the new
-	 * GFile instance.
-	 * @return new GFile instance.
+	 * @param length number of bytes in the file or -1 if not known or directory
+	 * @param metadata opaque blob that will be stored and associated with the new
+	 * GFile instance
+	 * @return new GFile instance
 	 */
-	public GFile storeFileWithParent(String filename, GFile parent, int fileIndex,
-			boolean isDirectory, long length, METADATATYPE fileInfo) {
+	public synchronized GFile storeFileWithParent(String filename, GFile parent, long fileIndex,
+			boolean isDirectory, long length, METADATATYPE metadata) {
+		FileData<METADATATYPE> fileData =
+			doStoreFile(filename, parent, fileIndex, isDirectory, length, metadata);
+		return fileData.file;
+	}
+
+	private FileData<METADATATYPE> doStoreMissingDir(String filename, GFile parent) {
 		parent = (parent == null) ? rootDir : parent;
-		int fileNum = (fileIndex != -1) ? fileIndex : fileToEntryMap.size();
 
-		Map<String, GFile> dirContents = getDirectoryContents(parent, true);
-		String uniqueName = dirContents.containsKey(filename) && !isDirectory
-				? filename + "[" + Integer.toString(fileNum) + "]"
-				: filename;
+		Map<String, FileData<METADATATYPE>> dirContents = getDirectoryContents(parent, true);
+		GFile file = createNewFile(parent, filename, true, -1, null);
 
-		GFile file = createNewFile(parent, uniqueName, isDirectory, length, fileInfo);
+		FileData<METADATATYPE> fileData = new FileData<>();
+		fileData.file = file;
+		fileData.fileIndex = -1;
+		fileToEntryMap.put(file, fileData);
+		dirContents.put(filename, fileData);
+		getDirectoryContents(file, true);
 
-		dirContents.put(uniqueName, file);
-		if (file.isDirectory()) {
+		return fileData;
+	}
+
+	private FileData<METADATATYPE> doStoreFile(String filename, GFile parent, long fileIndex,
+			boolean isDirectory, long length, METADATATYPE metadata) {
+		parent = (parent == null) ? rootDir : parent;
+		long fileNum = (fileIndex != -1) ? fileIndex : fileToEntryMap.size();
+		if (fileIndexToEntryMap.containsKey(fileNum)) {
+			Msg.warn(this, "Duplicate fileNum for file " + parent.getPath() + "/" + filename);
+		}
+
+		Map<String, FileData<METADATATYPE>> dirContents = getDirectoryContents(parent, true);
+		String uniqueName = makeUniqueFilename(dirContents.containsKey(filename) && !isDirectory,
+			filename, fileNum);
+
+		GFile file = createNewFile(parent, uniqueName, isDirectory, length, metadata);
+
+		FileData<METADATATYPE> fileData = new FileData<>();
+		fileData.file = file;
+		fileData.fileIndex = fileNum;
+		fileData.metaData = metadata;
+		fileToEntryMap.put(file, fileData);
+		fileIndexToEntryMap.put(fileNum, fileData);
+
+		dirContents.put(uniqueName, fileData);
+		if (isDirectory) {
+			// side-effect of get will eagerly create the directorylisting entry 
 			getDirectoryContents(file, true);
 		}
 
-		fileToEntryMap.put(file, fileInfo);
-		return file;
+		return fileData;
 	}
 
-	/**
-	 * Returns a string-&gt;GFile map that holds the contents of a single directory.
-	 * @param directoryFile
-	 * @return
-	 */
-	protected Map<String, GFile> getDirectoryContents(GFile directoryFile,
+	private String makeUniqueFilename(boolean wasNameCollision, String filename, long fileIndex) {
+		return wasNameCollision
+				? filename + "[" + Long.toString(fileIndex) + "]"
+				: filename;
+	}
+
+	private Map<String, FileData<METADATATYPE>> getDirectoryContents(GFile directoryFile,
 			boolean createIfMissing) {
 		directoryFile = (directoryFile != null) ? directoryFile : rootDir;
 
-		Map<String, GFile> dirContents = directoryToListing.get(directoryFile);
+		Map<String, FileData<METADATATYPE>> dirContents = directoryToListing.get(directoryFile);
 		if (dirContents == null && createIfMissing) {
 			dirContents = new HashMap<>();
 			directoryToListing.put(directoryFile, dirContents);
@@ -242,23 +314,21 @@ public class FileSystemIndexHelper<METADATATYPE> {
 	protected GFile lookupParent(String[] nameparts) {
 
 		GFile currentDir = rootDir;
-		GFile currentFile = rootDir;
 		for (int i = 0; i < nameparts.length - 1; i++) {
-			Map<String, GFile> currentDirContents = getDirectoryContents(currentDir, true);
+			Map<String, FileData<METADATATYPE>> currentDirContents =
+				getDirectoryContents(currentDir, true);
 			String name = nameparts[i];
 			if (name.isEmpty()) {
 				continue;
 			}
-			currentFile = currentDirContents.get(name);
-			if (currentFile == null) {
-				currentFile = createNewFile(currentDir, name, true, -1, null);
-				currentDirContents.put(name, currentFile);
-				getDirectoryContents(currentFile, true);
+			FileData<METADATATYPE> fileData = currentDirContents.get(name);
+			if (fileData == null) {
+				fileData = doStoreMissingDir(name, currentDir);
 			}
-			currentDir = currentFile;
+			currentDir = fileData.file;
 		}
 
-		return currentFile;
+		return currentDir;
 	}
 
 	/**
@@ -280,6 +350,38 @@ public class FileSystemIndexHelper<METADATATYPE> {
 		FSRL newFileFSRL = parentFile.getFSRL().appendPath(name);
 		return GFileImpl.fromFSRL(rootDir.getFilesystem(), parentFile, newFileFSRL, isDirectory,
 			size);
+	}
+
+	/**
+	 * Updates the FSRL of a file already in the index.
+	 * 
+	 * @param file current {@link GFile}
+	 * @param newFSRL the new FSRL the new file will be given
+	 */
+	public synchronized void updateFSRL(GFile file, FSRL newFSRL) {
+		GFileImpl newFile = GFileImpl.fromFSRL(rootDir.getFilesystem(), file.getParentFile(),
+			newFSRL, file.isDirectory(), file.getLength());
+
+		FileData<METADATATYPE> fileData = fileToEntryMap.get(file);
+		if (fileData != null) {
+			fileToEntryMap.remove(file);
+			fileIndexToEntryMap.remove(fileData.fileIndex);
+			
+			fileData.file = newFile;
+			
+			fileToEntryMap.put(newFile, fileData);
+			if (fileData.fileIndex != -1) {
+				fileIndexToEntryMap.put(fileData.fileIndex, fileData);
+			}
+		}
+
+		Map<String, FileData<METADATATYPE>> dirListing = directoryToListing.get(file);
+		if ( dirListing != null) {
+			// typically this shouldn't ever happen as directory entries don't have MD5s and won't need to be updated
+			// after the fact
+			directoryToListing.remove(file);
+			directoryToListing.put(newFile, dirListing);
+		}
 	}
 
 	@Override
